--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,13 @@
     box-sizing: border-box;
 }
 
-body {
+:root {
+    --primery-color: rgb(0, 123, 255);
+}
+
+body,
+button,
+input {
     font-family: 'Bitter', serif;
 }
 
@@ -15,6 +21,10 @@ body {
     text-align: center;
     flex-direction: column;
     gap: 2rem;
+}
+
+.flex {
+    display: flex;
 }
 
 .flex-centered {
@@ -33,7 +43,7 @@ body {
 }
 
 .text-blue {
-    color: rgb(0, 123, 255);
+    color: var(--primery-color);
 }
 
 a {
@@ -41,7 +51,7 @@ a {
 }
 
 .button-outlined {
-    background-color: rgb(0, 123, 255);
+    background-color: var(--primery-color);
     color: white;
     padding: 15px 25px;
     border-radius: 8px;
@@ -49,7 +59,7 @@ a {
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-    border: 3px solid rgb(0, 123, 255);
+    border: 3px solid var(--primery-color);
     text-transform: uppercase;
     transition: 0.2s;
     font-weight: 500;
@@ -63,9 +73,142 @@ a {
     background-color: transparent;
     color: rgb(0, 123, 255);
 }
-.quize-card{
+
+.outlined {
+    border: 2px solid var(--primery-color);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.bg-peimery {
+    background-color: var(--primery-color);
+}
+
+.quize-card {
     width: calc(100% - 30px);
     max-width: 600px;
-    box-shadow: 1px 2px 3px #2222;
-    margin: 0 auto;
+    box-shadow: 1px 2px 10px #2222225c;
+    margin: 2rem auto;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.flex-centered.between {
+    justify-content: space-between;
+}
+
+.title {
+    padding: 10px;
+    color: white;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.timer {
+    background-color: white;
+    color: var(--primery-color);
+    padding: 10px 17px;
+    border-radius: 5px;
+    font-size: 28px;
+    font-weight: 400;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.question-num {
+    font-size: 17px;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.question {
+    font-size: 17px;
+    margin: 10px 0;
+}
+
+.code {
+    font-family: monospace;
+    color: white;
+    background-color: #343a40;
+    padding: 10px;
+    font-size: 17px;
+    margin-bottom: 8px;
+}
+
+.options.flex {
+    flex-direction: column;
+}
+
+.quize-card button {
+    width: 100%;
+    text-align: left;
+    padding: 10px;
+    margin: 5px 0;
+    font-size: 17px;
+    font-weight: 500;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.quize-card button:hover {
+    border-color: #333333;
+}
+
+.gap-5 {
+    gap: 5px;
+}
+
+.submit-buttons button {
+    text-align: center;
+    color: var(--primery-color);
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+}
+
+.submit-buttons button i {
+    margin-inline: 8px;
+    font-size: 19px;
+}
+
+.submit-buttons button:hover {
+    background-color: var(--primery-color);
+    border-color: var(--primery-color);
+    color: white;
+}
+
+button.valid {
+    background-color: rgb(8, 104, 8) !important;
+    color: white;
+    border-color: rgb(8, 104, 8) !important;
+}
+
+button.invalid {
+    background-color: rgb(174, 35, 10) !important;
+    color: white;
+    border-color: rgb(174, 35, 10) !important;
+}
+
+.swal2-popup {
+    padding: 4rem 0;
+}
+
+.swal2-icon {
+    margin-block: 4rem;
+}
+.checked{
+    background-color: #007bff55!important;
+    color: #343a40;
+    border: 2px solid #007bff55!important;
 }
