--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,7 +87,7 @@ a {
     background-color: var(--primery-color);
 }
 
-.quize-card {
+.quize-card, .card {
     width: calc(100% - 30px);
     max-width: 600px;
     box-shadow: 1px 2px 10px #2222225c;
@@ -103,14 +103,40 @@ a {
 .flex-centered.between {
     justify-content: space-between;
 }
-
+.card .btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    font-size: 16px;
+    margin-block: 10px;
+}
+.card input{
+    width: 100%;
+    margin-block: 10px;
+    font-size: 17px;
+    padding: 10px;
+    background-color: #a9a9a938;
+}
+.card .btn i{
+    font-size: 24px;
+}
+.card p{
+    font-weight: 400;
+}
 .title {
     padding: 10px;
     color: white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
-
+.bold{
+    font-weight: bolder;
+}
+p.bold {
+    font-size: 24px;
+}
 .timer {
     background-color: white;
     color: var(--primery-color);
@@ -201,14 +227,94 @@ button.invalid {
 }
 
 .swal2-popup {
-    padding: 4rem 0;
+    /* padding: 4rem 0; */
 }
 
 .swal2-icon {
-    margin-block: 4rem;
+    margin-block: 4rem;     
 }
 .checked{
     background-color: #007bff55!important;
     color: #343a40;
     border: 2px solid #007bff55!important;
+}
+
+.line{
+    display: inline-block;
+    width: 12vw;
+    height: 0.2vw;
+    background-color: #007bff;
+    margin: 0.1vw 0;
+    opacity: .7;
+}
+
+.certiftcate{
+    width: calc(100% - 20px);
+    aspect-ratio: 10/7;
+    margin: 10px auto;
+    border: 4vw solid #343a40;
+    color: #343a40;
+}
+.certiftcate h2{
+    font-size: 4vw;
+    color: rgb(52, 58, 64);
+}
+.certiftcate >.flex{
+    border: 0.5vw solid #343a4032;
+    width: 100%;
+    aspect-ratio: 10/7;
+    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    grid-gap: 1vw;
+    gap: 1vw;
+    text-align: center;
+}
+
+.certiftcate .head span{
+    font-size: 2vw;
+    opacity: .7;
+    font-weight: 500;
+}
+
+.certiftcate h3{
+    font-size: 3vw;
+}
+
+.certiftcate .certificate-body h4 {
+    font-size: 3vw;
+    color: #007bff;
+}
+
+.certiftcate .certificate-body p{
+    font-size: 2vw;
+    font-weight: 400;
+}
+.certificate-footer.flex{
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+}
+.certificate-footer  * {
+    font-size: 2vw;
+}
+.certificate-footer .flex{
+    flex-direction: column;
+}
+.flex-between{
+    justify-content: space-between;
+}
+.margin{
+    margin:15px 10px;
+}
+@media (max-width:400px) {
+    .buttns.flex{
+        flex-direction: column;
+        row-gap: 1rem;
+    }
+}
+#username{
+    margin-block: 8px;
 }
